type of inputPrice to number

--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
     
             <label>
                 Price:
-                <input type="text" id="priceInput" value="0">
+                <input type="number" id="priceInput" value="0">
             </label>
             <button type="submit" id="addItemButton">
                 Add Item
