--- a/main.html
+++ b/main.html
@@ -23,8 +23,8 @@
     <div class="container">
         <form id="itemForm">
             <label>
-                <input type="text" id="nameInput" class="text-input" autocomplete="off" placeholder="Name of Item:" required>
-                <label for="nameInput" class="labrl"></label>
+                Name of Item:
+                <input type="text" id="nameInput" required>
             </label>
     
             <label>
